# zulipcli

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
doc/: .gitignore  Makefile  preamble.tex  zulipcli.tex
src/zulipcli/: Makefile  cli.nw  init.nw
tests/: .gitignore  Makefile
